fix styles when collapsing classes/jobs

--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@
 
 .member-list-item__classes {
     float: left;
+    width: 880px;
 }
 
 .class-level {
@@ -50,6 +51,7 @@
     line-height: 35px;
     overflow: hidden;
     opacity: 0.6;
+    margin-top: 1px;
 }
 
 .class-level.capped {
